Homogenising masterlist production across fields

--- a/dmu1/dmu1_ml_AKARI-NEP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_AKARI-NEP/2_Merging.ipynb
@@ -424,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## V - Adding HELP unique identifiers and field columns"
+    "## V.a - Adding HELP unique identifiers and field columns"
    ]
   },
   {
@@ -460,6 +460,31 @@
     "    print(\"The HELP IDs are not unique!!!\")\n",
     "else:\n",
     "    print(\"OK!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## V.b - Add Specz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), False, dtype=bool)\n",
+    "                                   name=\"zspec_association_flag\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), '', dtype='<U33')\n",
+    "                                   name=\"specz_id\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), -99, dtype=int)\n",
+    "                                   name=\"zspec_qual\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), np.nan)\n",
+    "                                   name=\"zspec\"))"
    ]
   },
   {
@@ -665,12 +690,14 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "master_catalogue['help_id', 'akari_id', 'ps1_id', 'sdss_id', 'nep_id'].write(\n",
+    "master_catalogue['help_id', 'akari_id', 'ps1_id', 'sdss_id', 'nep_id','specz_id'].write(\n",
     "    \"{}/master_list_cross_ident_akari-nep{}.fits\".format(OUT_DIR, SUFFIX))\n",
-    "master_catalogue.remove_columns(['akari_id', 'ps1_id', 'sdss_id', 'nep_id'])"
+    "master_catalogue.remove_columns(['akari_id', 'ps1_id', 'sdss_id', 'nep_id','specz_id'])"
    ]
   },
   {
@@ -726,7 +753,7 @@
     "                \"m_{}\".format(band), \"merr_{}\".format(band)]    \n",
     "    \n",
     "columns += [\"stellarity\", \"stellarity_origin\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \"flag_optnir_obs\", \n",
-    "            \"flag_optnir_det\", \"ebv\"]"
+    "            \"flag_optnir_det\", \"ebv\", 'zspec_association_flag', 'zspec_qual', 'zspec']"
    ]
   },
   {
@@ -775,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
