--- a/dmu1/dmu1_ml_AKARI-SEP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/2_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -482,7 +484,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "specz.rename_column('RA', 'ra')\n",
@@ -689,9 +693,28 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue['help_id', 'vhs_id', 'simes_id', 'des_id'].write(\n",
-    "    \"{}/master_list_cross_ident_akari-sep{}.fits\".format(OUT_DIR, SUFFIX))\n",
-    "master_catalogue.remove_columns(['vhs_id', 'simes_id', 'des_id'])"
+    "id_names = []\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if '_id' in col:\n",
+    "        id_names += [col]\n",
+    "    if '_intid' in col:\n",
+    "        id_names += [col]\n",
+    "        \n",
+    "print(id_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue[id_names].write(\n",
+    "    \"{}/master_list_cross_ident_akari-sep{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
+    "id_names.remove('help_id')\n",
+    "master_catalogue.remove_columns(id_names)"
    ]
   },
   {
@@ -743,7 +766,7 @@
     "                \"flag_{}\".format(band)]    \n",
     "    \n",
     "columns += [\"stellarity\", \"stellarity_origin\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \"flag_optnir_obs\", \n",
-    "            \"flag_optnir_det\", \"ebv\"]"
+    "            \"flag_optnir_det\", \"ebv\", 'zspec_association_flag',  'zspec_qual', 'zspec']"
    ]
   },
   {
