--- a/dmu1/dmu1_ml_ELAIS-N1/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/2_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -544,7 +546,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We create an masked array with all the stellarities and get the maximum value, as well as its\n",
@@ -560,9 +564,7 @@
     "master_catalogue.add_column(Column(data=max_stellarity.filled(), name=\"stellarity\"))\n",
     "\n",
     "stellarity_origin = np.full(len(master_catalogue), \"NO_INFORMATION\", dtype=\"S20\")\n",
-    "stellarity_origin[~no_stellarity_mask] = np.array([\n",
-    "    \"WFC\", \"SPARCS\", \"HSC\", \"DXS\", \"SERVS_IRAC1\", \"SERVS_IRAC2\", \"SWIRE_IRAC1\", \"SWIRE_IRAC2\",\n",
-    "    \"SWIRE_IRAC3\", \"SWIRE_IRAC4\"])[np.argmax(stellarity_array, axis=0)[~no_stellarity_mask]]\n",
+    "stellarity_origin[~no_stellarity_mask] = np.array(stellarity_columns)[np.argmax(stellarity_array, axis=0)[~no_stellarity_mask]]\n",
     "\n",
     "master_catalogue.add_column(Column(data=stellarity_origin, name=\"stellarity_origin\"))\n",
     "\n",
@@ -641,7 +643,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "specz =  Table.read(\"../../dmu23/dmu23_ELAIS-N1/data/ELAIS-N1-specz-v2.1.fits\")"
@@ -1302,11 +1306,28 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue['help_id', 'wfc_id', 'dxs_id', 'servs_intid', 'swire_intid', \n",
-    "                 'sparcs_intid', 'hsc_id', 'ps1_id', 'sdss_id', 'specz_id'].write(\n",
-    "    \"{}/master_list_cross_ident_elais-n1{}.fits\".format(OUT_DIR, SUFFIX))\n",
-    "master_catalogue.remove_columns(['wfc_id', 'dxs_id', 'servs_intid', 'swire_intid',\n",
-    "                                 'sparcs_intid', 'hsc_id', 'ps1_id', 'sdss_id', 'specz_id'])"
+    "id_names = []\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if '_id' in col:\n",
+    "        id_names += [col]\n",
+    "    if '_intid' in col:\n",
+    "        id_names += [col]\n",
+    "        \n",
+    "print(id_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue[id_names].write(\n",
+    "    \"{}/master_list_cross_ident_elais-n1{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
+    "id_names.remove('help_id')\n",
+    "master_catalogue.remove_columns(id_names)"
    ]
   },
   {
