--- a/dmu1/dmu1_ml_GAMA-09/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-09/2_Merging.ipynb
@@ -646,10 +646,23 @@
     }
    ],
    "source": [
-    "master_catalogue.add_column(Column(\n",
-    "    data=np.nanmax([master_catalogue[column] for column in stellarity_columns], axis=0),\n",
-    "    name=\"stellarity\"\n",
-    "))\n",
+    "# We create an masked array with all the stellarities and get the maximum value, as well as its\n",
+    "# origin.  Some sources may not have an associated stellarity.\n",
+    "stellarity_array = np.array([master_catalogue[column] for column in stellarity_columns])\n",
+    "stellarity_array = np.ma.masked_array(stellarity_array, np.isnan(stellarity_array))\n",
+    "\n",
+    "max_stellarity = np.max(stellarity_array, axis=0)\n",
+    "max_stellarity.fill_value = np.nan\n",
+    "\n",
+    "no_stellarity_mask = max_stellarity.mask\n",
+    "\n",
+    "master_catalogue.add_column(Column(data=max_stellarity.filled(), name=\"stellarity\"))\n",
+    "\n",
+    "stellarity_origin = np.full(len(master_catalogue), \"NO_INFORMATION\", dtype=\"S20\")\n",
+    "stellarity_origin[~no_stellarity_mask] = np.array(stellarity_columns)[np.argmax(stellarity_array, axis=0)[~no_stellarity_mask]]\n",
+    "\n",
+    "master_catalogue.add_column(Column(data=stellarity_origin, name=\"stellarity_origin\"))\n",
+    "\n",
     "master_catalogue.remove_columns(stellarity_columns)"
    ]
   },
@@ -759,7 +772,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue = specz_merge(master_catalogue, specz, radius=.8 * u.arcsec)"
@@ -1392,12 +1407,28 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue['help_id', 'cfhtls_id', 'cfhtlens_id', 'decals_id', 'hsc_id', \n",
-    "                 'kids_id', 'ps1_id', 'las_id', 'vhs_id', 'viking_id', 'sdss_id',\n",
-    "                 'specz_id'].write(\n",
-    "    \"{}/master_list_cross_ident_gama-09{}.fits\".format(OUT_DIR, SUFFIX))\n",
-    "master_catalogue.remove_columns(['cfhtls_id', 'cfhtlens_id', 'decals_id', 'hsc_id', 'kids_id',\n",
-    "                                 'ps1_id', 'las_id', 'vhs_id', 'viking_id', 'sdss_id', 'specz_id'])"
+    "id_names = []\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if '_id' in col:\n",
+    "        id_names += [col]\n",
+    "    if '_intid' in col:\n",
+    "        id_names += [col]\n",
+    "        \n",
+    "print(id_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue[id_names].write(\n",
+    "    \"{}/master_list_cross_ident_gama-09{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
+    "id_names.remove('help_id')\n",
+    "master_catalogue.remove_columns(id_names)"
    ]
   },
   {
@@ -1433,7 +1464,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We use vista_ks as filter ID for VISTA Ks\n",
@@ -1445,7 +1478,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We use omegacam_XXX for the KIDS bands\n",
@@ -1479,7 +1514,7 @@
     "                \"m_{}\".format(band), \"merr_{}\".format(band),\n",
     "                \"flag_{}\".format(band)]    \n",
     "    \n",
-    "columns += [\"stellarity\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \"flag_optnir_obs\", \"flag_optnir_det\", \n",
+    "columns += [\"stellarity\", \"stellarity_origin\",\"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \"flag_optnir_obs\", \"flag_optnir_det\", \n",
     "            \"zspec\", \"zspec_qual\", \"zspec_association_flag\", \"ebv\"]"
    ]
   },
