--- a/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
@@ -498,10 +498,34 @@
     "stellarity_columns = [column for column in master_catalogue.colnames\n",
     "                      if 'stellarity' in column]\n",
     "\n",
-    "master_catalogue.add_column(Column(\n",
-    "    data=np.nanmax([master_catalogue[column] for column in stellarity_columns], axis=0),\n",
-    "    name=\"stellarity\"\n",
-    "))\n",
+    "print(\", \".join(stellarity_columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# We create an masked array with all the stellarities and get the maximum value, as well as its\n",
+    "# origin.  Some sources may not have an associated stellarity.\n",
+    "stellarity_array = np.array([master_catalogue[column] for column in stellarity_columns])\n",
+    "stellarity_array = np.ma.masked_array(stellarity_array, np.isnan(stellarity_array))\n",
+    "\n",
+    "max_stellarity = np.max(stellarity_array, axis=0)\n",
+    "max_stellarity.fill_value = np.nan\n",
+    "\n",
+    "no_stellarity_mask = max_stellarity.mask\n",
+    "\n",
+    "master_catalogue.add_column(Column(data=max_stellarity.filled(), name=\"stellarity\"))\n",
+    "\n",
+    "stellarity_origin = np.full(len(master_catalogue), \"NO_INFORMATION\", dtype=\"S20\")\n",
+    "stellarity_origin[~no_stellarity_mask] = np.array(stellarity_columns)[np.argmax(stellarity_array, axis=0)[~no_stellarity_mask]]\n",
+    "\n",
+    "master_catalogue.add_column(Column(data=stellarity_origin, name=\"stellarity_origin\"))\n",
+    "\n",
     "master_catalogue.remove_columns(stellarity_columns)"
    ]
   },
@@ -837,25 +861,28 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "master_catalogue['help_id', \n",
-    "                 'decals_id', \n",
-    "                 'hsc_id', \n",
-    "                 'kids_id', \n",
-    "                 'ps1_id', \n",
-    "                 'las_id',\n",
-    "                 'viking_id',\n",
-    "                 'specz_id'\n",
-    "                ].write(\n",
-    "    \"{}/master_list_cross_ident_gama-15{}.fits\".format(OUT_DIR, SUFFIX))\n",
-    "master_catalogue.remove_columns([\n",
-    "                 'decals_id', \n",
-    "                 'hsc_id', \n",
-    "                 'kids_id', \n",
-    "                 'ps1_id', \n",
-    "                 'las_id',\n",
-    "                 'viking_id',\n",
-    "                 'specz_id'])"
+    "id_names = []\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if '_id' in col:\n",
+    "        id_names += [col]\n",
+    "    if '_intid' in col:\n",
+    "        id_names += [col]\n",
+    "        \n",
+    "print(id_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue[id_names].write(\n",
+    "    \"{}/master_list_cross_ident_gama-15{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
+    "id_names.remove('help_id')\n",
+    "master_catalogue.remove_columns(id_names)"
    ]
   },
   {
@@ -906,7 +933,7 @@
     "                \"m_{}\".format(band), \"merr_{}\".format(band),\n",
     "                \"flag_{}\".format(band)]    \n",
     "    \n",
-    "columns += [\"stellarity\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \n",
+    "columns += [\"stellarity\", \"stellarity_origin\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \n",
     "            \"flag_optnir_obs\", \"flag_optnir_det\", \"ebv\",\n",
     "            \"zspec\", \"zspec_qual\", \"zspec_association_flag\"]"
    ]
