--- a/dmu1/dmu1_ml_HDF-N/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/2_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -562,7 +564,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "specz.rename_column('RA', 'ra')\n",
@@ -1207,7 +1211,8 @@
     "               ] \n",
     "\n",
     "columns += [\"stellarity\", \"stellarity_origin\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \n",
-    "            \"flag_optnir_obs\", \"flag_optnir_det\", \"ebv\"] # \"zspec\", \"zspec_qual\", \"zspec_association_flag\","
+    "            \"flag_optnir_obs\", \"flag_optnir_det\", \n",
+    "            \"zspec\", \"zspec_qual\", \"zspec_association_flag\", \"ebv\"] # "
    ]
   },
   {
