--- a/dmu1/dmu1_ml_NGP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_NGP/2_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -415,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -501,6 +505,31 @@
     "    print(\"The HELP IDs are not unique!!!\")\n",
     "else:\n",
     "    print(\"OK!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## V.b Add specz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), False, dtype=bool)\n",
+    "                                   name=\"zspec_association_flag\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), '', dtype='<U33')\n",
+    "                                   name=\"specz_id\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), -99, dtype=int)\n",
+    "                                   name=\"zspec_qual\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), np.nan)\n",
+    "                                   name=\"zspec\"))"
    ]
   },
   {
@@ -744,16 +773,14 @@
     "                \"m_{}\".format(band), \"merr_{}\".format(band),\n",
     "                \"flag_{}\".format(band)]    \n",
     "    \n",
-    "columns += [\"stellarity\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \n",
-    "            \"flag_optnir_obs\", \"flag_optnir_det\", \"ebv\" ]"
+    "columns += [\"stellarity\", \"stellarity_origin\",\"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \n",
+    "            \"flag_optnir_obs\", \"flag_optnir_det\", \"ebv\", 'zspec_association_flag', 'zspec_qual', 'zspec' ]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
