--- a/dmu1/dmu1_ml_SA13/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SA13/2_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -426,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "specz =  Table.read(\"../../dmu23/dmu23_SA13/data/SA13-specz-v2.csv\")"
@@ -435,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "specz.rename_column('RA', 'ra')\n",
@@ -720,7 +726,7 @@
     "                \"flag_{}\".format(band)]    \n",
     "    \n",
     "columns += [\"stellarity\", \"stellarity_origin\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \"flag_optnir_obs\", \n",
-    "            \"flag_optnir_det\", \"ebv\"]"
+    "            \"flag_optnir_det\", \"ebv\", 'zspec_association_flag', 'zspec_qual', 'zspec']"
    ]
   },
   {
