--- a/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
@@ -557,6 +557,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## V.b - Add Specz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), False, dtype=bool)\n",
+    "                                   name=\"zspec_association_flag\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), '', dtype='<U33')\n",
+    "                                   name=\"specz_id\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), -99, dtype=int)\n",
+    "                                   name=\"zspec_qual\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), np.nan)\n",
+    "                                   name=\"zspec\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## VII.a Wavelength domain coverage\n",
     "\n",
     "We add a binary `flag_optnir_obs` indicating that a source was observed in a given wavelength domain:\n",
