--- a/dmu1/dmu1_ml_SPIRE-NEP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SPIRE-NEP/2_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -266,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# No ps1 stellarity\n",
@@ -351,6 +355,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), False, dtype=bool)\n",
+    "                                   name=\"zspec_association_flag\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), '', dtype='<U33')\n",
+    "                                   name=\"specz_id\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), -99, dtype=int)\n",
+    "                                   name=\"zspec_qual\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), np.nan)\n",
+    "                                   name=\"zspec\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "collapsed": true
@@ -381,7 +403,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#specz[:10].show_in_notebook()"
@@ -390,7 +414,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#nb_merge_dist_plot(\n",
@@ -686,7 +712,7 @@
     "                \"flag_{}\".format(band)]    \n",
     "    \n",
     "columns += [\"flag_cleaned\", \"flag_gaia\", \n",
-    "            \"flag_optnir_obs\", \"flag_optnir_det\", \"ebv\"] #\"stellarity\", \"flag_merged\""
+    "            \"flag_optnir_obs\", \"flag_optnir_det\", \"ebv\", 'zspec_association_flag', 'zspec_qual', 'zspec'] #\"stellarity\", \"flag_merged\""
    ]
   },
   {
@@ -710,7 +736,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue[columns].write(\"{}/master_catalogue_spire-nep{}.fits\".format(OUT_DIR, SUFFIX))"
