--- a/dmu1/dmu1_ml_XMM-13hr/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-13hr/2_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -437,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "specz.rename_column('RA', 'ra')\n",
