--- a/dmu1/dmu1_ml_xFLS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_xFLS/2_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -81,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "spitzer = Table.read(\"{}/Spitzer.fits\".format(TMP_DIR))\n",
@@ -667,7 +671,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "spitzer_moc = MOC(filename=\"../../dmu0/dmu0_DataFusion-Spitzer/data/Datafusion-xFLS_MOC.fits\")\n",
@@ -738,7 +744,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# SpARCS is a catalogue of sources detected in r (with fluxes measured at \n",
