--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -23,6 +23,7 @@
    "outputs": [],
    "source": [
     "from astropy.table import Table, Column\n",
+    "from astropy import units as u\n",
     "import numpy as np\n",
     "\n",
     "from pymoc import MOC\n",
@@ -75,10 +76,11 @@
    "outputs": [],
    "source": [
     "masterlist_summary = Table()\n",
-    "masterlist_summary.add_column(Column(data = np.array(dr1)[:,0], name = 'Field'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = 'Objects'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = 'Area (sq. degrees)'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = 'File size'))"
+    "masterlist_summary.add_column(Column(data = np.array(dr1)[:,0], name = 'field'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = 'suffix'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = 'objects'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = 'area'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = 'file_size'))"
    ]
   },
   {
@@ -111,19 +113,21 @@
     "    number_objects = len(Table.read('dmu1_ml_{}/data/master_list_cross_ident_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
     "                                                                                      field[1])))\n",
-    "    masterlist_summary['Objects'][masterlist_summary['Field'] == field[0]] = number_objects\n",
+    "    masterlist_summary['objects'][masterlist_summary['field'] == field[0]] = number_objects\n",
     "    \n",
     "    \n",
     "    moc = MOC(filename='../dmu2/dmu2_field_coverages/{}_MOC.fits'.format(field[0]))\n",
     "    area = round(moc.area_sq_deg)\n",
-    "    masterlist_summary['Area (sq. degrees)'][masterlist_summary['Field'] == field[0]] = area\n",
+    "    masterlist_summary['area'][masterlist_summary['field'] == field[0]] = area\n",
+    "    \n",
+    "    masterlist_summary['suffix'][masterlist_summary['field'] == field[0]] = field[1]\n",
     "    \n",
     "    size = os.stat('dmu1_ml_{}/data/master_catalogue_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
     "                                                                                      field[1])).st_size\n",
     "    #Can't install packages on Vulcain\n",
     "    #size_readable = humanfriendly.format_size(size)\n",
-    "    masterlist_summary['File size'][masterlist_summary['Field'] == field[0]] = size\n",
+    "    masterlist_summary['file_size'][masterlist_summary['field'] == field[0]] = size\n",
     "    \n",
     "    #TODO:\n",
     "    num_surveys = 0.\n",
