--- a/dmu1/dmu1_ml_Bootes/2_HELP_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2_HELP_Merging.ipynb
@@ -629,10 +629,23 @@
     }
    ],
    "source": [
-    "master_catalogue.add_column(Column(\n",
-    "    data=np.nanmax([master_catalogue[column] for column in stellarity_columns], axis=0),\n",
-    "    name=\"stellarity\"\n",
-    "))\n",
+    "# We create an masked array with all the stellarities and get the maximum value, as well as its\n",
+    "# origin.  Some sources may not have an associated stellarity.\n",
+    "stellarity_array = np.array([master_catalogue[column] for column in stellarity_columns])\n",
+    "stellarity_array = np.ma.masked_array(stellarity_array, np.isnan(stellarity_array))\n",
+    "\n",
+    "max_stellarity = np.max(stellarity_array, axis=0)\n",
+    "max_stellarity.fill_value = np.nan\n",
+    "\n",
+    "no_stellarity_mask = max_stellarity.mask\n",
+    "\n",
+    "master_catalogue.add_column(Column(data=max_stellarity.filled(), name=\"stellarity\"))\n",
+    "\n",
+    "stellarity_origin = np.full(len(master_catalogue), \"NO_INFORMATION\", dtype=\"S20\")\n",
+    "stellarity_origin[~no_stellarity_mask] = np.array(stellarity_columns)[np.argmax(stellarity_array, axis=0)[~no_stellarity_mask]]\n",
+    "\n",
+    "master_catalogue.add_column(Column(data=stellarity_origin, name=\"stellarity_origin\"))\n",
+    "\n",
     "master_catalogue.remove_columns(stellarity_columns)"
    ]
   },
@@ -706,29 +719,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "specz =  Table.read(\"../../dmu23/dmu23_Bootes/data/Bootes-specz-v2.1.fits\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "nb_merge_dist_plot(\n",
-    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
-    "    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
-    "master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), False, dtype=bool)\n",
+    "                                   name=\"zspec_association_flag\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), '', dtype='<U33')\n",
+    "                                   name=\"specz_id\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), -99, dtype=int)\n",
+    "                                   name=\"zspec_qual\"))\n",
+    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), np.nan)\n",
+    "                                   name=\"zspec\"))"
    ]
   },
   {
@@ -1062,7 +1067,8 @@
     "               ]    \n",
     "    \n",
     "columns += [\"stellarity\",  \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \"flag_optnir_obs\", \n",
-    "            \"flag_optnir_det\", \"ebv\"] #\"zspec\", \"zspec_qual\", \"zspec_association_flag\", \"stellarity_origin\","
+    "            \"flag_optnir_det\", \"ebv\", 'zspec_association_flag', 'zspec_qual', 'zspec', \"stellarity_origin\"] \n",
+    "#\"zspec\", \"zspec_qual\", \"zspec_association_flag\", \"stellarity_origin\","
    ]
   },
   {
@@ -1091,7 +1097,7 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue[columns].write(\"{}/master_catalogue_bootes_help{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
+    "master_catalogue[columns].write(\"{}/master_catalogue_bootes{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
    ]
   }
  ],
