--- a/dmu1/dmu1_ml_Lockman-SWIRE/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_Lockman-SWIRE/2_Merging.ipynb
@@ -581,13 +581,38 @@
     }
    ],
    "source": [
+    "\n",
     "stellarity_columns = [column for column in master_catalogue.colnames\n",
     "                      if 'stellarity' in column]\n",
     "\n",
-    "master_catalogue.add_column(Column(\n",
-    "    data=np.nanmax([master_catalogue[column] for column in stellarity_columns], axis=0),\n",
-    "    name=\"stellarity\"\n",
-    "))\n",
+    "print(\", \".join(stellarity_columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# We create an masked array with all the stellarities and get the maximum value, as well as its\n",
+    "# origin.  Some sources may not have an associated stellarity.\n",
+    "stellarity_array = np.array([master_catalogue[column] for column in stellarity_columns])\n",
+    "stellarity_array = np.ma.masked_array(stellarity_array, np.isnan(stellarity_array))\n",
+    "\n",
+    "max_stellarity = np.max(stellarity_array, axis=0)\n",
+    "max_stellarity.fill_value = np.nan\n",
+    "\n",
+    "no_stellarity_mask = max_stellarity.mask\n",
+    "\n",
+    "master_catalogue.add_column(Column(data=max_stellarity.filled(), name=\"stellarity\"))\n",
+    "\n",
+    "stellarity_origin = np.full(len(master_catalogue), \"NO_INFORMATION\", dtype=\"S20\")\n",
+    "stellarity_origin[~no_stellarity_mask] = np.array(stellarity_columns)[np.argmax(stellarity_array, axis=0)[~no_stellarity_mask]]\n",
+    "\n",
+    "master_catalogue.add_column(Column(data=stellarity_origin, name=\"stellarity_origin\"))\n",
+    "\n",
     "master_catalogue.remove_columns(stellarity_columns)"
    ]
   },
@@ -1708,7 +1733,7 @@
     "columns += [ 'm_megacam_i', 'ferr_megacam_i', 'merr_megacam_i', 'flag_megacam_i', 'f_megacam_i',\n",
     "             'm_megacam_y', 'ferr_megacam_y', 'merr_megacam_y', 'flag_megacam_y', 'f_megacam_y']\n",
     "    \n",
-    "columns += [\"stellarity\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \"flag_optnir_obs\", \"flag_optnir_det\", \n",
+    "columns += [\"stellarity\", \"stellarity_origin\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \"flag_optnir_obs\", \"flag_optnir_det\", \n",
     "            \"zspec\", \"zspec_qual\", \"zspec_association_flag\", \"ebv\"]"
    ]
   },
