AKARI-SEP for Cigale

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -28,6 +28,8 @@
     "\n",
     "from pymoc import MOC\n",
     "\n",
+    "from herschelhelp_internal.masterli\n",
+    "\n",
     "import os\n",
     "#import humanfriendly"
    ]
@@ -125,6 +127,11 @@
     "    size = os.stat('dmu1_ml_{}/data/master_catalogue_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
     "                                                                                      field[1])).st_size\n",
+    "    \n",
+    "    \n",
+    "    latest_suffix = find_last_suffix('dr1_ml_{}/data/')\n",
+    "    \n",
+    "    \n",
     "    #Can't install packages on Vulcain\n",
     "    #size_readable = humanfriendly.format_size(size)\n",
     "    masterlist_summary['file_size'][masterlist_summary['field'] == field[0]] = size\n",
