--- a/dmu1/dmu1_ml_SGP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_SGP/3_Checks_and_diagnostics.ipynb
@@ -141,7 +141,7 @@
     "        np.sum(flag_det[flag_obs == 3] == 2),\n",
     "        np.sum(flag_det[flag_obs == 3] == 3)\n",
     "    ],\n",
-    "    set_labels=('near-IR', 'Optical'),\n",
+    "    set_labels=('Optical', 'near-IR'),\n",
     "    subset_label_formatter=lambda x: \"{}%\".format(int(100*x/np.sum(flag_det != 0)))\n",
     ")\n",
     "plt.title(\"Detection of the {} sources detected\\n in any wavelength domains \"\n",
