--- a/dmu28/dmu28_AKARI-SEP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_AKARI-SEP/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,9 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180129_cigale.fits\")"
+    "SUFFIX = '20180201'\n",
+    "\n",
+    "master_catalogue = Table.read(\"../../dmu32/dmu32_AKARI-SEP/data/AKARI-SEP_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
   {
@@ -67,12 +69,12 @@
    },
    "outputs": [],
    "source": [
-    "good = {}\n",
-    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
-    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "# good = {}\n",
+    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
+    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -90,7 +92,7 @@
    },
    "outputs": [],
    "source": [
-    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -101,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -119,7 +121,8 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()"
+    "# best_catalogue = master_catalogue[combined_good].copy()\n",
+    "best_catalogue = master_catalogue.copy()"
    ]
   },
   {
@@ -164,12 +167,12 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [          \"OmegaCAM u\"]\n",
-    "g_bands = [\"GPC1 g\", \"OmegaCAM g\"]\n",
-    "r_bands = [\"GPC1 r\", \"OmegaCAM r\"]\n",
-    "i_bands = [\"GPC1 i\", \"OmegaCAM i\"]\n",
-    "z_bands = [\"VISTA z\", \"OmegaCAM z\", \"GPC1 z\",]\n",
-    "y_bands = [\"VISTA y\"  \"GPC1 y\", ]\n",
+    "u_bands = []\n",
+    "g_bands = [\"decam_g\"]\n",
+    "r_bands = [\"decam_r\"]\n",
+    "i_bands = [\"decam_i\"]\n",
+    "z_bands = [\"decam_z\"]\n",
+    "y_bands = [\"decam_y\"]\n",
     "\n",
     "def remove_unneeded_fluxes(list_of_bands):\n",
     "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
@@ -187,8 +190,8 @@
    },
    "outputs": [],
    "source": [
-    "remove_unneeded_fluxes(g_bands)\n",
     "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(g_bands)\n",
     "remove_unneeded_fluxes(r_bands)\n",
     "remove_unneeded_fluxes(i_bands)\n",
     "remove_unneeded_fluxes(z_bands)\n",
@@ -307,7 +310,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_zspec_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/AKARI-SEP_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX))"
    ]
   }
  ],
