--- a/dmu1/dmu1_ml_AKARI-SEP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/3_Checks_and_diagnostics.ipynb
@@ -86,12 +86,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "# 0 - Quick checks"
    ]
@@ -212,17 +210,13 @@
     }
    ],
    "source": [
-    "venn3(\n",
+    "venn2(\n",
     "    [\n",
-    "        np.sum(flag_obs == 4),\n",
-    "        np.sum(flag_obs == 2),\n",
-    "        np.sum(flag_obs == 6),\n",
     "        np.sum(flag_obs == 1),\n",
-    "        np.sum(flag_obs == 5),\n",
-    "        np.sum(flag_obs == 3),\n",
-    "        np.sum(flag_obs == 7)\n",
+    "        np.sum(flag_obs == 2),\n",
+    "        np.sum(flag_obs == 3)\n",
     "    ],\n",
-    "    set_labels=('Optical', 'near-IR', 'mid-IR'),\n",
+    "    set_labels=('Optical', 'near-IR'),\n",
     "    subset_label_formatter=lambda x: \"{}%\".format(int(100*x/len(flag_obs)))\n",
     ")\n",
     "plt.title(\"Wavelength domain observations\");"
@@ -254,17 +248,13 @@
    ],
    "source": [
     "\n",
-    "venn3(\n",
+    "venn2(\n",
     "    [\n",
-    "        np.sum(flag_det[flag_obs == 7] == 4),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 2),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 6),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 1),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 5),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 3),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 7)\n",
+    "        np.sum(flag_det[flag_obs == 3] == 1),\n",
+    "        np.sum(flag_det[flag_obs == 3] == 2),\n",
+    "        np.sum(flag_det[flag_obs == 3] == 3)\n",
     "    ],\n",
-    "    set_labels=('Optical', 'near-IR', 'mid-IR'),\n",
+    "    set_labels=( 'Optical', 'near-IR'),\n",
     "    subset_label_formatter=lambda x: \"{}%\".format(int(100*x/np.sum(flag_det != 0)))\n",
     ")\n",
     "plt.title(\"Detection of the {} sources detected\\n in any wavelength domains \"\n",
