renaming vista_k to vista_ks on AKARI-SEP
working on naming consistency across fields

--- a/dmu1/dmu1_ml_AKARI-SEP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/2_Merging.ipynb
@@ -648,7 +648,7 @@
     "nb_nir_flux = (\n",
     "    1 * ~np.isnan(master_catalogue['f_vista_j']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_vista_h']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vista_k'])\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_ks'])\n",
     ")\n",
     "\n",
     "nb_mir_flux = (\n",
