--- a/dmu1/dmu1_ml_AKARI-SEP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/3_Checks_and_diagnostics.ipynb
@@ -288,7 +288,7 @@
     "y_bands = [\"DECam y\"]\n",
     "j_bands = [           \"VISTA j\"]\n",
     "h_bands = [           \"VISTA h\"]\n",
-    "k_bands = [           \"VISTA k\"]"
+    "k_bands = [           \"VISTA ks\"]"
    ]
   },
   {
@@ -526,10 +526,8 @@
     }
    ],
    "source": [
-    "ukidss_ks_like = master_catalogue['m_vista_k'] + 0.003 + 0.004 * (\n",
-    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_k'])\n",
-    "nb_compare_mags(twomass['kmag'] + k_2mass_to_ab, ukidss_ks_like[ml_twomass_idx],\n",
-    "                labels=(\"2MASS Ks\", \"VISTA Ks-like (total)\"))"
+    "nb_compare_mags(twomass['kmag'] + k_2mass_to_ab, master_catalogue['m_vista_ks'][ml_twomass_idx],\n",
+    "                labels=(\"2MASS Ks\", \"VISTA Ks (total)\"))"
    ]
   },
   {
@@ -592,9 +590,9 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_vista_k'],\n",
-    "    master_catalogue['m_ap_vista_k'] - master_catalogue['m_vista_k'],\n",
-    "    \"k total magnitude (VISTA)\", \"k aperture mag - total mag (VISTA)\",\n",
+    "    master_catalogue['m_vista_ks'],\n",
+    "    master_catalogue['m_ap_vista_ks'] - master_catalogue['m_vista_ks'],\n",
+    "    \"Ks total magnitude (VISTA)\", \"Ks aperture mag - total mag (VISTA)\",\n",
     "    master_catalogue[\"stellarity\"],\n",
     "    invert_x=True\n",
     ")"
@@ -637,7 +635,7 @@
    "source": [
     "nb_ccplots(\n",
     "    master_catalogue['m_irac_i1'] - master_catalogue['m_irac_i2'],\n",
-    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_k'],\n",
+    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_ks'],\n",
     "    \"irac 1 - irac 2 (SIMES)\", \"J - K (VISTA)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
