--- a/dmu1/dmu1_ml_AKARI-SEP/1.2_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/1.2_VISTA-VHS.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -115,10 +117,10 @@
     "        'HPETROMAGERR': \"merr_vista_h\", \n",
     "        'HAPERMAG3': \"m_ap_vista_h\", \n",
     "        'HAPERMAG3ERR': \"merr_ap_vista_h\",        \n",
-    "        'KSPETROMAG': \"m_vista_k\", \n",
-    "        'KSPETROMAGERR': \"merr_vista_k\", \n",
-    "        'KSAPERMAG3': \"m_ap_vista_k\", \n",
-    "        'KSAPERMAG3ERR': \"merr_ap_vista_k\",\n",
+    "        'KSPETROMAG': \"m_vista_ks\", \n",
+    "        'KSPETROMAGERR': \"merr_vista_ks\", \n",
+    "        'KSAPERMAG3': \"m_ap_vista_ks\", \n",
+    "        'KSAPERMAG3ERR': \"merr_ap_vista_ks\",\n",
     "    })\n",
     "\n",
     "\n",
@@ -289,7 +291,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_ap_vista_h', 'merr_ap_vista_j', 'merr_ap_vista_k']\n",
+    "SORT_COLS = ['merr_ap_vista_h', 'merr_ap_vista_j', 'merr_ap_vista_ks']\n",
     "FLAG_NAME = 'vhs_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
