--- a/dmu1/dmu1_ml_AKARI-SEP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/2_Merging.ipynb
@@ -795,7 +795,7 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue[columns].write(\"{}/master_catalogue_akari-sep{}.fits\".format(OUT_DIR, SUFFIX))"
+    "master_catalogue[columns].write(\"{}/master_catalogue_akari-sep{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
    ]
   }
  ],
