--- a/dmu1/dmu1_ml_SGP/1.5_DES.ipynb
+++ b/dmu1/dmu1_ml_SGP/1.5_DES.ipynb
@@ -729,7 +729,7 @@
     "        errcol = \"merr{}\".format(col[1:])\n",
     "        \n",
     "        # Some objects have -99.0 values\n",
-    "        mask = (np.isclose(catalogue[col], 99.) )\n",
+    "        mask = (catalogue[col] > 50.) | (catalogue[col] < 0.)\n",
     "        catalogue[col][mask] = np.nan\n",
     "        catalogue[errcol][mask] = np.nan\n",
     "        \n",
